Fixed search screen not fitting monitor

--- a/client/src/assets/stylesheets/search.scss
+++ b/client/src/assets/stylesheets/search.scss
@@ -8,23 +8,21 @@
 }
 
 .search-header {
+    overflow: hidden;
     color: $shale_grey;
     text-align: center;
-
+    
     .search-title {
-        font-size: 8em;
-        font-weight: 200;
-    }
-
-    .search-subtitle {
+        box-sizing: content-box;
         margin: 0;
-        font-size: 1.5em;
-        font-weight: 300;
+        font-size: 6em;
+        font-weight: 200;
+        line-height: 15vh;
+        
     }
 }
 
 .search-function {
-    padding-top: 5vh;
     margin: 0 auto;
     width: 60%;
 
